--- a/templates/index.html
+++ b/templates/index.html
@@ -14,21 +14,29 @@
     <section>
         <article style="float: left;">
             <h2>Current To-Do-List:</h2>
-            <dl>
-                <dt>{{Name}}</dt>
-                <dd>{{Desc}}</dd>
-            </dl>
+            <ul>
+                <li>Placeholder</li>
+                <ul>
+                    <li>Placeholder</li>
+                </ul>
+                <li>{{Name}}</li>
+                <ul>
+                    <li>{{Desc}}</li>
+                </ul>
+            </ul>
         </article>
         <article style="float: right;">
             <h2>Edit To-Do-List:</h2>
+            <p>(NOTE: <span id="Blue">Blue Text = Uppercase</span>, <span id="Green">Green Text = Lowercase</span>)</p>
+
             <form id="form" action="{{url_for('hello')}}" method="post">
-                <input type="text" id="todo" placeholder="Enter Your Task" name="todo">
+                <input type="text" id="todCre" placeholder="Enter Your Task" name="todo">
                 <button id="add" type="Submit">Add/Create</button>
                 <br>
-                <input type="text" id="todo" placeholder="Enter Your Task" name="Update">
+                <input type="text" id="todoUpd" placeholder="Enter Your Task" name="Update">
                 <button id="add" type="Submit">Change/Update</button>
                 <br>
-                <input type="text" id="todo" placeholder="Enter Your Task" name="Delete">
+                <input type="text" id="todoDel" placeholder="Enter Your Task" name="Delete">
                 <button id="add" type="Submit">Remove/Delete</button>
             </form>
         </article>
