--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             </form>
             <br>
             <!--LAST FUNCTION TO FINISH!!!! VVVVV-->
-            <form id="form3" action="{{url_for('hello')}}" method="put">
+            <form id="form3" action="{{url_for('update')}}" method="post">
                 <input required type="text" placeholder="Task Name" name="todoUpd">
                 <br>
                 <input required type="text" placeholder="NEW Name" name="updName">
@@ -52,6 +52,9 @@
                 <button id="add" type="Submit">Update</button>
             </form>
         </article>
+        <footer>
+            <p id="silly">\(^-^)/</p>
+        </footer>
     </section>
 </body>
 </html>
